# iac-agents

./: .coverage  .coveragerc  .flake8  .gitignore  .pylintrc  ENHANCED_FEATURES.md  README.md  SHOWCASE_README.md  git_push_action.py  pyproject.toml  pytest.ini  run_app.py  run_enhanced_demo.py  run_example.py  run_tests.sh  test_ai_agent.py  test_complete_workflow.py  test_devops_agent_git_cycle.py  test_devops_deployment.py  test_devops_git_cycle.py  test_template_generation.py  test_templates_final_correct.py  test_terraform_toggle.py  test_workflow.py  visualize_workflow.py  workflow_diagram.mmd
demo/: run_enhanced_demo.py  showcase_demo.py
examples/: simple_vm.py  web_app_stack.py
src/iac_agents/: approval_workflow.py  compliance_framework.py  deployment_automation.py  logging_system.py  showcase_scenarios.py  template_validator.py
tests/: __init__.py  utils.py
tests/integration/: __init__.py  debug_template.py  test_agent_workflow.py  test_application_functionality.py  test_config_integration.py  test_core_components.py  test_end_to_end.py  test_enhanced_system.py  test_extraction_logic.py  test_fixes.py  test_langgraph_workflow.py  test_streamlit_compatibility.py  test_supervisor_processing.py  test_template_extraction.py  test_template_generation.py  test_template_pipeline.py  test_workflow_basic.py
tests/test_data/: azure_subscription_response.json  llm_response_with_terraform.txt  sample_prompt.txt  sample_terraform.tf  showcase_data.json  terraform_init_output.txt  terraform_version_output.txt  valid_terraform_template.tf
tests/unit/: __init__.py  (+59 more)
(+116 files in other folders)
