[tool.poetry]
name = "iac-agents"
version = "0.1.0"
description = "Project to set up cloud infrastructure through chats."
authors = ["Marcel Scherenberg <marcel.scherenberg@prodyna.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.4.5"
langchain = "^0.3.25"
openai = "^1.79.0"
streamlit = "^1.45.1"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.17"
python-dotenv = "^1.0.0"
duckduckgo-search = "^6.0.0"
lxml = "^5.4.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
azure-ai-projects = "^1.0.0b11"
azure-identity = "^1.23.0"
graphviz = "^0.21"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.3.7"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
bandit = "^1.8.3"
mypy = "^1.15.0"
ruff = "^0.11.10"
ipython = "^9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
